Fix Header gap

--- a/src/pages/BlogAllArticles/BlogAllArticles.module.css
+++ b/src/pages/BlogAllArticles/BlogAllArticles.module.css
@@ -29,7 +29,7 @@ button {
 
 .headerAllArticlesGrid {
   display: grid;
-  gap: var(--space-after-title);
+  gap: 36px;
   padding: 20px;
 }
 
@@ -51,7 +51,7 @@ button {
   object-position: right bottom;
   z-index: -5;
   width: 100%;
-  height: 100%;
+  height: 623px;
 }
 
 .subContentOfheaderAllArticles {
@@ -62,7 +62,7 @@ button {
 @media only screen and (min-width: 769px) {
   .headerAllArticles {
     /* grid-template-columns: 2fr 4fr; */
-    padding: 100px 60px 40px;
+    padding: 190px 60px 40px;
     .headerAllArticlesGrid {
       grid-template-columns: 2fr 4fr;
       width: 1100px; /* size to wrapp content of the page */
@@ -71,6 +71,10 @@ button {
 
     .introColorsContainer {
       bottom: 0;
+    }
+
+    .introColorsImg {
+      height: 561px;
     }
 
     .headerAllArticles_Title {
